# configuration-check

./: README.md
src/: CMakeLists.txt  main.c
